added update method and testcases, along with adding circleci setup

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,18 @@ jobs:
        - run:
            name: run tests
            command: cd test_javascript && npm run test
+  build-and-test-arrayscripts:
+    docker:
+       - image: cimg/node:14.20.0
+    steps:
+      - checkout
+      - run:
+          name: install dependencies
+          command: cd test-api-js && npm install
+    
+      - run:
+          name: run tests
+          command: cd test-api-js && npm run test
 workflows:
   sample:
     jobs:
@@ -37,3 +49,4 @@ workflows:
               only:
                 - master
       - build-and-test-javascript
+      - build-and-test-arrayscripts
